# xml_tools

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  xml_tools.py
.github/workflows/: ci.yml
src/xml_tools/: __init__.py  cli.py  core.py
tests/: run_smoke.sh  smoke_test.py  test_core.py
tests/data/xml_simple_sample_1/: datamodel_min.yaml  sample_layout.xml  sample_layout_alt.xml
tests/data/xml_simple_sample_1/expected/: full_regex_items.yaml  min_datamodel_default.yaml
tests/data/xml_simple_sample_1/schemas/: catalog.xsd
tests/mocks/xml_simple_sample_1/: datamodel_min.yaml  sample_layout.xml  sample_layout_alt.xml
tests/mocks/xml_simple_sample_1/expected/: full_regex_items.yaml  list_min.yaml  min_datamodel_default.yaml
tests/mocks/xml_simple_sample_1/schemas/: catalog.xsd
